# manyjson

./: .gitignore  .npmrc  CMakeLists.txt  DESIGN_SYSTEM.md  ELECTRON_BLACK_SCREEN_FIX.md  FEATURE_IMPLEMENTATION.md  GITHUB_ACTIONS_FIXES.md  GITHUB_ACTIONS_UPDATE.md  MIGRATION.md  PR_TEMPLATE.md  README.md  configure  env.d.ts  index-web.html  index.html  invalid-test.json  linear-issues-breakdown.md  package-lock.json  package.json  test-copy-debug.html  test-data.json  tsconfig.json  user-data-1.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
.github/: README.md
.github/workflows/: build-test.yml  build.yml  release.yml  simple-test.yml  test-quality.yml
assets/: icon.icns
dist-electron/: main.js  preload.js
doc/: FEATURE_IMPLEMENTATION.md  IMPLEMENTATION_NOTES.md  JSON_DIFF_FEATURE.md  LC-92_MOBILE_VIEW_ONLY.md  SEO.md  STRUCTURED_JSON_STORAGE.md
docs/: PROJECT_STRUCTURE.md
electron/: main.ts  preload.ts  tsconfig.json
example/: product-data-1.json  product-data-2.json  product-schema.json  sample-text-1.txt  sample-text-2.txt  test-diff-after.json  test-diff-before.json  user-data-invalid.json  user-schema.json
example/test-folder.json/: readme.txt
include/: manyjson.h
public/: robots.txt
scripts/: build.sh  clean.sh  generate-sitemap.mjs  run.sh  setup_gtest.sh  test.sh
src/: App.vue  index.html  main-desktop.ts  main-web.ts  main.cpp  main.js  main.ts  manyjson.cpp  preload.js  renderer.js  seo.ts  style.css  worker.ts
src/components/: AddFilePopup.vue  AddSchemaDialog.vue  AdvancedJsonEditor.vue  AppSidebar.vue  ContextMenu.vue  FileSelectorPopup.vue  JsonDiffViewer.vue  JsonHighlight.vue  LeftPanel.vue  MiddlePanel.vue  MobileFriendly.vue  RightPanel.vue  ShareSchemaPopup.vue  StatusBar.vue  ThemeToggle.vue
src/components/__tests__/: JsonDiffViewer.test.ts
src/components/icons/: CancelIcon.vue  CopyIcon.vue  DiffIcon.vue  EditIcon.vue  SaveIcon.vue
src/composables/: index.ts  useCapability.ts  useInlineRename.ts  useJsonFiles.ts  useSchemaManager.ts  useSchemas.ts  useValidation.ts
src/models/: tabResource.ts
src/platform/: desktop.ts  index.ts  runtime.ts  web.ts
src/services/: fileService.ts  index.ts  logService.ts  schemaService.ts  shareService.ts  validationService.ts
src/stores/: app.ts  app.ts.backup  ui.ts
src/stores/__tests__/: app.test.ts
src/types/: seo.ts
src/views/: Home.vue
test/: README.md  app.test.ts  basic.test.ts  demo-data.json  index.test.ts  setup.ts  tabResource.test.ts  types.d.ts
test/composables/: useSchemas.test.ts  useValidation.test.ts
test/services/: fileService.test.ts  schemaService.test.ts  validationService.test.ts
test/stores/: app.test.ts
tests/: CMakeLists.txt  json_manager_test.cpp
